--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
+    "build": "tsc -p .",
     "watch": "./node_modules/typescript/bin/tsc --watch"
   }
 }
