--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@actions/exec": "^1.0.4",
     "@actions/io": "^1.0.2",
     "@octokit/action": "^3.18.0",
+    "@octokit/auth-action": "^2.0.0",
     "@octokit/core": "^3.5.1",
     "@octokit/plugin-rest-endpoint-methods": "^5.13.0",
     "@terascope/fetch-github-release": "^0.8.7",
